[package]
name = "mining_hw2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
hashbrown = { version="0.12.0", features=["rayon"] }
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.136"
